modificacion en banner

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <section class="banner__general">
                 <p class="bienvenido">bienvenido</p>
                 <p class="aprende">aprende sobre el mundo cripto</p>
-                <a href="ver__mas">VER MAS</a>
+                <a href="ver__mas">VER MAS gato</a>
         </section>
         <!-- EXPLICACION+PRESENTACION -->
         <section class="principal">
