cambio de imagen del logo

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- HEADER -->
     <header>
         <div class="header__logo"> 
-            <img src="imagenes/Logo cripto arg.png" alt="logo cripto arg" title="Logo Cripto ARG"/>
+            <img src="imagenes/logocriptoarg.png" alt="logo cripto arg" title="Logo Cripto ARG"/>
         </div>
         <nav class="header__menu">
             <!-- links de navegacion -->
@@ -38,7 +38,7 @@
         <section class="banner__general">
                 <p class="bienvenido">bienvenido</p>
                 <p class="aprende">aprende sobre el mundo cripto</p>
-                <a href="ver__mas">VER MAS gato</a>
+                <a href="ver__mas">VER MAS</a>
         </section>
         <!-- EXPLICACION+PRESENTACION -->
         <section class="principal">
