logos y hover a ver mas

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
         <!-- BANNER -->
         <section class="banner__general">
                 <p class="bienvenido">bienvenido</p>
+                <div class="monedas__logos">
+                    <img src="imagenes/criptosx4.png" alt="criptomonedas" title="criptomonedas">
+                </div>
                 <p class="aprende">aprende sobre el mundo cripto</p>
                 <a href="ver__mas">VER MAS</a>
         </section>
@@ -49,7 +52,7 @@
                 <br>
                 <div class="explicacion">
                     <p>En esta página aprenderás los conocimientos básicos para convertirte en un inversionista de monedas digitales. Termina con esas dudas de que todo esto es una farsa, y no tendrás que estar a expensas de si alguien te está ofreciendo algo para estafarte o no.</p>
-                    <p>Aprenderás como utilizar diferentes plataformas para empezar a invertir en distintas criptomonedas con distintas estrategias. El objetivo es que domines lo siguiente:</p>
+                    <p>El objetivo es que domines lo siguiente:</p>
                     <br>
                     <br>
                     <ul class="listas">
@@ -62,8 +65,7 @@
 
                     <br>
                     <br>
-                    <p> Al terminar el curso tendrás los conocimientos básicos para convertirte en un inversionista de activos digitales. Tú tendrás la decisión de utilizar estos conocimientos para convertirte en un Trader o solo en alguien que busca hacer inversiones a mediano-largo plazo.</p>
-                    <p>Sin duda aprovecha a esta oportunidad y forma parte de este grupo de personas que están descubriendo esta nueva economía global.</p>
+                    <p> Obtendras los conocimientos básicos para convertirte en un inversionista de activos digitales. Tú tendrás la decisión de utilizar estos conocimientos para convertirte en un Trader o solo en alguien que busca hacer inversiones a mediano-largo plazo.</p>
                     <br>
                     <br>
                 </div>
