saque listas y agregue una imagen

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                 <p class="bienvenido">bienvenido</p>
                 <div class="monedas__logos">
                     <img src="imagenes/criptosx4.png" alt="criptomonedas" title="criptomonedas">
+                    <p class="aprende">aprende sobre el mundo cripto</p>
                 </div>
-                <p class="aprende">aprende sobre el mundo cripto</p>
                 <a href="ver__mas">VER MAS</a>
         </section>
         <!-- EXPLICACION+PRESENTACION -->
@@ -56,11 +56,11 @@
                     <br>
                     <br>
                     <ul class="listas">
-                        <li><p>¿Que es una criptomoneda?</p></li>
-                        <li><p>¿Que tipos de criptomonedas existen?</p></li>
-                        <li><p>¿Para que se utilzan las monedas digitales?</p></li>
-                        <li><p>¿Donde puedes comprar y vender?</p></li>
-                        <li><p>¿Como puedes ganar criptomonedas?</p></li>
+                        <p>¿Que es una criptomoneda?</p>
+                        <p>¿Que tipos de criptomonedas existen?</p>
+                        <p>¿Para que se utilzan las monedas digitales?</p>
+                        <p>¿Donde puedes comprar y vender?</p>
+                        <p>¿Como puedes ganar criptomonedas?</p>
                     </ul>
 
                     <br>
