--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
         <div class="header__logo"> 
             <img src="imagenes/logocriptoarg.png" alt="logo cripto arg" title="Logo Cripto ARG"/>
-        </div>
+        </div>      
         <nav class="header__menu">
             <!-- links de navegacion -->
             <ul>
@@ -40,8 +40,12 @@
                 <div class="monedas__logos">
                     <img src="imagenes/criptosx4.png" alt="criptomonedas" title="criptomonedas">
                     <p class="aprende">aprende sobre el mundo cripto</p>
+                    <p class="tips">Criptos, exchanges, estrategias, altcoins y mucho mas..</p>
                 </div>
-                <a href="ver__mas">VER MAS</a>
+                <a href="https://www.instagram.com/criptomonedargentina/?hl=es-la">instagram</a>
+                <div class="instagram_img">
+                    <img src="imagenes/inst_gris.png" alt="">
+                </div>
         </section>
         <!-- EXPLICACION+PRESENTACION -->
         <section class="principal">
