--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/estilos.css">
     <link rel="stylesheet" href="css/pruebacss.css">
-    <title> Crioto Arg </title>
+    <title> Crioto Arg Sitio </title>
     <!-- GOOGLE FONTS -->
         <!-- NANUM -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
