--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/estilos.css">
     <link rel="stylesheet" href="css/pruebacss.css">
-    <title> Crioto Arg </title>
+    <title> Cripto Arg </title>
     <!-- GOOGLE FONTS -->
         <!-- NANUM -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -98,6 +98,7 @@
             <div class="estrategias">
                 <h4>ESTRATEGIAS</h4>
                 <p>Yield Farming, "agricultura de rendimiento". Ecosistema DeFi, "finanza decentralizada"</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis quas exercitationem natus, fugiat itaque sequi. Eos saepe necessitatibus dolores ea, ipsam cum temporibus voluptas magnam corrupti quam expedita laborum veritatis?</p>
             </div>
         </div>
             <div class="copy__footer">
