se reduce la cantidad de parrafos

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             </div>
             <div class="blockchain">
                 <h4>BLOCKCHAIN</h4>
-                <p>Es un libro de contabilidad digital distribuido que almacena datos de cualquier tipo y a su vez registra la información.</p>
+                <p>Es un libro de <strong>contabilidad digital</strong> distribuido que almacena datos de cualquier tipo y a su vez registra la información.</p>
             </div>
             <div class="estrategias">
                 <h4>ESTRATEGIAS</h4>
