agregando estructura del footer

--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
         <div class="cajas__footer">
             <div class="criptomoneda">
                 <h4>CRIPTOMONEDAS</h4>
-                <p>Una criptomoneda, es un medio digital de intercambio diseñado y creado para hacer más seguras las transacciones económicas.</p>
+                <p>Una criptomoneda, es un medio digital de intercambio diseñado y creado para hacer más seguras las <strong>transacciones económicas.</strong></p>
             </div>
             <div class="exchange">
                 <h4>EXCHANGES</h4>
-                <p>Son plataformas en línea donde se intercambian monedas digitales, tal cual sucedería en las casas de cambios reales.</p>
+                <p>Son plataformas en línea donde se intercambian <strong>monedas digitales</strong>, tal cual sucedería en las casas de cambios reales.</p>
             </div>
             <div class="blockchain">
                 <h4>BLOCKCHAIN</h4>
@@ -101,7 +101,7 @@
             </div>
         </div>
             <div class="copy__footer">
-            <p>&copy; TODOS LOS DERECHOS RESERVADOS</p>
+            <p>&copy; TODOS LOS DERECHOS RESERVADOS 2022</p>
         </div>
         
     </footer>
