se modifico estrategia dentro de footer

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             </div>
             <div class="estrategias">
                 <h4>ESTRATEGIAS</h4>
-                <p>Yield Farming, "agricultura de rendimiento". Ecosistema DeFi, "finanza decentralizada"</p>
+                <p>Yield Farming, "agricultura de rendimiento". Ecosistema DeFi, "finanza decentralizada". Ambas estrategias son excelentes para un ingreso pasivo.</p>
             </div>
         </div>
             <div class="copy__footer">
