agregue enlace en logo y modique el footer

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- HEADER -->
     <header>
         <div class="header__logo"> 
-            <img src="imagenes/logocriptoarg.png" alt="logo cripto arg" title="Logo Cripto ARG"/>
+            <a href="index.html"><img src="imagenes/logocriptoarg.png" alt="logo cripto arg" title="Logo Cripto ARG"/></a>
         </div>      
         <nav class="header__menu">
             <!-- links de navegacion -->
@@ -43,7 +43,7 @@
                     <p class="aprende">aprende sobre el mundo cripto</p>
                     <p class="tips">Criptos, exchanges, estrategias, altcoins y mucho mas..</p>
                 </div>
-                <a href="https://www.instagram.com/criptomonedargentina/?hl=es-la">instagram</a>
+                    <a href="https://www.instagram.com/criptomonedargentina/?hl=es-la">instagram</a>
                 <div class="instagram_img">
                     <img src="imagenes/inst_gris.png" alt="">
                 </div>
